updated opf with annotation transfer

--- a/f90f6b65ce93429ab6c4fecc0091847d.opf/meta.yml
+++ b/f90f6b65ce93429ab6c4fecc0091847d.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     37a836605bc14cbfbf303357af3e3a30:
       base_file: v004.txt
       image_group_id: I1PD95849
-      title: ''
+      title: དགོངས་པའི་སྐད་ཀྱི་འགྲེལ་པ།
       total_pages: 1678
       volume_number: 4
